[FIX] Demo: conference with IE, video from participant using Conference app for Android, portrait orientation: stretched horizontally

--- a/examples/demo/streaming/conference/conference.css
+++ b/examples/demo/streaming/conference/conference.css
@@ -4,9 +4,11 @@
     height: 242px;
     margin: 0 auto;
 }
-.fp-remoteVideo>video {
-    width: 320px;
-    height: 240px;
+
+.display {
+    width: 100%;
+    height: 100%;
+    display: inline-block;
 }
 
 .fp-localVideo {
@@ -20,4 +22,8 @@
     height: 165px;
 }
 
+video, object {
+    width: 100%;
+    height: 100%;
+}
 
